--- a/src/app/todos/todo-add/todo-add.component.html
+++ b/src/app/todos/todo-add/todo-add.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <h1>todos</h1>
+    <h1>Notas rápida</h1>
     <input class="new-todo" 
     [formControl] = "txtInput"
     (keyup.enter)="agregar()"
